--- a/cnn_pytorch_cifar10.ipynb
+++ b/cnn_pytorch_cifar10.ipynb
@@ -5,13 +5,19 @@
    "id": "84c243d4",
    "metadata": {},
    "source": [
-    "#Load Libraries"
+    "# Load Libraries"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dbb1c4df",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb14c135",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": []
   }
  ],
